Update Vasilev Stress Competition.ipynb

--- a/Vasilev Stress Competition.ipynb
+++ b/Vasilev Stress Competition.ipynb
@@ -686,7 +686,7 @@
    "id": "ea21983e",
    "metadata": {},
    "source": [
-    "Итог: попытка неудачная. Не результат не удалось улучшить ни удалением сверток, ни удалением LSTM, ни представлением букв с помощью Positional Encoding. Значит, нужно обратиться к классическим моделям."
+    "Итог: попытка неудачная. Результат не удалось улучшить ни удалением сверток, ни удалением LSTM, ни представлением букв с помощью Positional Encoding. Значит, нужно обратиться к классическим моделям."
    ]
   },
   {
